# lcri-market-microstructure-lab

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.githooks/: commit-msg
.github/workflows/: ci.yml
docs/: absorption-regime-metrics.md  artifact-catalog.md  cost-aware-evaluation.md  feature-stability.md  lcri-generalization-gates.md  liquidity-fracture.md  pressure-memory.md  queue-reversal.md  report-verification.md  residual-tail-diagnostics.md  sample-results.md  shadow-absorption.md  transmission-pressure.md
examples/: fit_and_score.py
src/lcri_lab/: __init__.py  absorption.py  baseline.py  cli.py  evaluation.py  features.py  ingest.py  labels.py  memory.py  model.py  plotting.py  publishability.py  reporting.py  reversal.py  schema.py  sensitivity.py  simulator.py
tests/: test_absorption.py  test_absorption_regime_metrics.py  test_baseline.py  test_cli.py  test_cost_aware_evaluation.py  test_demo.py  test_evaluation.py  test_feature_stability.py  test_features.py  test_ingest.py  test_labels.py  test_memory.py  test_model.py  test_plotting.py  test_public_api.py  test_publishability.py  test_regime_transitions.py  test_reporting.py  test_reversal.py  test_schema.py  test_sensitivity.py  test_simulator.py  test_tail_diagnostics.py  test_transition_conditioned_metrics.py  test_transmission_evaluation.py
