[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lcri-market-microstructure-lab"
version = "0.1.0"
description = "A research demo for liquidity-conditioned residual imbalance in synthetic limit order books."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sarp Tan Doven" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]

[project.scripts]
lcri-lab = "lcri_lab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lcri_lab"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
